# quantum_swarm

./: .gitignore  AGENTS.md  README.md  conftest.py  docker-compose.yml  main.py  openclaw Assistant.md  openclaw-financial-swarm-dashboard.html  pyproject.toml  requirements.txt
.gemini-kit/: guidelines.md  product.md  tech-stack.md
.planning/: DECISIONS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  phase-17-test-pack.md  v1.2-MILESTONE-AUDIT.md
.serena/: project.yml
claudedocs/: research_agent_persona_soul_20260305.md  research_agentic_frameworks_2026-03-05.md  research_existing_implementations_2026-03-06.md  research_personas_merit_20260305.md  research_soul_md_spec_20260305.md  research_soul_rewards_deep_dive_20260305.md
config/: agents.json  swarm_config.yaml
dashboard/: index.html
data/: MEMORY.md  audit.jsonl  tracking_update.json
docs/: Multi-Agent Financial Analysis Swarm Design.md  SOT_PERSONA_REWARD_SYSTEM.md  agentic_Framework_implementation.md  deep_research_dexter_integration.md  obsidian-tracking-automation.md  phase_0_completion_report.md
plans_archive/: phase-0-implementation-20260305.md  phase-1-implementation-20260305.md  phase-2-implementation-20260305.md  strategic_l1_legacy.py
quantum-swarm/: gemini-kit  planning
scripts/: generate_tracking_payload.py  generate_transclusion_indexes.py  index_financial_datasets.py  install_ars_timer.sh  install_obsidian_tracking_timer.sh  run_calibration_audit.py  run_obsidian_tracking_update.sh  setup_phase4.py  state_engine.py  update_project_tracking.py
(+397 files in other folders)
