[project]
name = "quantum-swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Configuration
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
    # Agent / LLM workflow
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "langsmith>=0.2.0",
    # Execution
    "nautilus_trader>=1.210.0",
    "ccxt>=4.0",
    "yfinance>=0.2",
    # Analysis
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.0",
    # Web dashboard
    "flask>=2.0",
    "flask-socketio>=5.0",
    # Date handling
    "pytz>=2023.3",
    "chromadb>=1.5.2",
    "duckdb>=1.4.4",
    "sentence-transformers>=5.2.3",
    "psycopg>=3.3.3",
    "langgraph-checkpoint-postgres>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
